--- a/src/App.css
+++ b/src/App.css
@@ -22,29 +22,46 @@ a {
   color: #000;
 }
 .customBg {
-  padding-top: 180px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5.4px);
   -webkit-backdrop-filter: blur(3.4px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+@media only screen and (max-width: 600px) {
+  .customBg {
+    max-width: 100%;
+  }
 }
 
 .pac-container {
   z-index: 1051 !important;
 }
+
 .map-container {
   width: 100%;
   height: 100vh;
 }
 @media only screen and (max-width: 600px) {
   .map-container {
-    height: 96.5vh;
+    height: 96vh;
   }
 }
 
 .combobox-input {
-  width: 60%;
+  width: 20%;
   padding: 0.5rem;
+}
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  top: 47%;
+  left: 0px;
 }
