--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,12 @@ a {
   overflow-x: auto;
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
+  width: 50% !important;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 @media only screen and (max-width: 600px) {
   .customBg {
-    max-width: 100%;
+    width: 100% !important;
   }
 }
 
