--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ body {
   height: 100%;
   margin: 0px;
   overflow-x: hidden;
-  font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
   background-color: #adadad;
 }
@@ -23,7 +22,8 @@ a {
 }
 .customBg {
   background: rgba(255, 255, 255, 0.2);
-  border-radius: 20px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5.4px);
   -webkit-backdrop-filter: blur(3.4px);
@@ -34,16 +34,33 @@ a {
   width: 45% !important;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+
+.Bg {
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
 @media only screen and (max-width: 600px) {
   .customBg {
     width: 100% !important;
   }
 }
-
+.input-height {
+  height: 40px !important;
+  padding-top: 20px !important;
+}
+.inputs {
+  height: 40px !important;
+}
 .pac-container {
   z-index: 1051 !important;
 }
-
+label {
+  position: relative;
+  top: -8px !important;
+  left: 10px !important;
+}
 .map-container {
   width: 100%;
   height: 100vh;
@@ -72,7 +89,7 @@ a {
   width: 1.5rem;
   position: absolute;
   top: 50%;
-  right: 8px;
+  right: 20px;
   height: 20px;
   color: rgb(83, 83, 83);
   transform: translateY(-50%);
