--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,22 @@ label {
 :focus {
   color: #000;
 }
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track,
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track-piece,
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-t::after {
+  background: rgb(36, 36, 36);
+  color: #04e3a6;
+}
+.gm-style .gm-style-iw-tc::after {
+  background: rgb(36, 36, 36);
+}
+button.gm-ui-hover-effect > span {
+  background-color: #04e3a6 !important;
+}
+.vuokraa {
+  align-items: center;
+  justify-content: center;
+  margin-left: 33%;
+  color: #fff;
+}
