--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@ a {
   color: #000;
 }
 .customBg {
-  background: rgba(211, 211, 211, 0.2);
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
@@ -35,20 +34,19 @@ a {
   width: 45% !important;
 }
 
-.Bg {
+@media only screen and (max-width: 1200px) {
+  .customBg {
+    width: 100% !important;
+  }
+}
+.resultsBg {
   width: 45% !important;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
-
-@media only screen and (max-width: 600px) {
-  .customBg {
-    width: 100% !important;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .Bg {
+@media only screen and (max-width: 1200px) {
+  .resultsBg {
     width: 100% !important;
   }
 }
@@ -111,11 +109,11 @@ label {
 .gm-style .gm-style-iw-d::-webkit-scrollbar-track-piece,
 .gm-style .gm-style-iw-c,
 .gm-style .gm-style-iw-t::after {
-  background: rgb(36, 36, 36);
+  background: rgb(61, 61, 61);
   color: #04e3a6;
 }
 .gm-style .gm-style-iw-tc::after {
-  background: rgb(36, 36, 36);
+  background: rgb(61, 61, 61);
 }
 button.gm-ui-hover-effect > span {
   background-color: #04e3a6 !important;
@@ -125,4 +123,11 @@ button.gm-ui-hover-effect > span {
   justify-content: center;
   margin-left: 33%;
   color: #fff;
+}
+.custombtn {
+  border-bottom-left-radius: 25px !important;
+  border-bottom-right-radius: 25px !important;
+  position: relative;
+  top: 4.5px;
+  width: 98% !important;
 }
