--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,9 @@ button.gm-ui-hover-effect > span {
   top: 4.5px;
   width: 98% !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .custombtn {
+    width: 95% !important;
+  }
+}
